--- a/09/css/boka.css
+++ b/09/css/boka.css
@@ -8,7 +8,7 @@ h2 {
   margin-bottom: 1rem;
 }
 
-input, select {
+input, select, textarea {
   font-size: 1.6rem;
   width: 100%;
   border: 1px solid grey;
