--- a/09/css/boka.css
+++ b/09/css/boka.css
@@ -16,6 +16,14 @@ input, select, textarea {
   margin-bottom: 1rem;
 }
 
+.card a {
+  margin: auto;
+}
+
+u {
+  text-decoration: underline;
+}
+
 /* Mobile */
 body {
   grid-template-columns: repeat(12, 1fr);
