--- a/09/css/hitta.css
+++ b/09/css/hitta.css
@@ -31,7 +31,7 @@ body {
   grid-area: m;
   border: 0;
   border-radius: 5px;
-  min-height: 300px;
+  min-height: 40vh;
   width: 100%;
   height: 100%;
 }
